JumpScript/tests/baselines/reference/duplicateStringNamedProperty1.errors.txt
tests/cases/compiler/duplicateStringNamedProperty1.jump(2,5): error TS2300: Duplicate identifier 'artist'.
tests/cases/compiler/duplicateStringNamedProperty1.jump(3,5): error TS2300: Duplicate identifier 'artist'.


==== tests/cases/compiler/duplicateStringNamedProperty1.jump (2 errors) ====
    export interface Album {
        "artist": string;
        ~~~~~~~~
!!! error TS2300: Duplicate identifier 'artist'.
        artist: string;
        ~~~~~~
!!! error TS2300: Duplicate identifier 'artist'.
    }